<resources>
    <string name="app_name">My Application</string>
    <string name="lbl_business_name">Business Name : </string>
    <string name="lbl_primarydetails">PrimaryDetails : </string>
    <string name="lbl_territory">Territory : </string>
    <string name="lbl_state">State : </string>
    <string name="lbl_name">Name :</string>
    <string name="lbl_quantity">Quantity : </string>
    <string name="lbl_size">Size :</string>
    <string name="lbl_products">Products :</string>
    <string name="search">Search</string>
    <string name="mobile_number">Mobile Number :</string>
</resources>