<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:strokeColor="@color/purple_700"
        app:strokeWidth="2dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNameLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_name"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"

                app:layout_constraintStart_toEndOf="@id/tvNameLbl"
                app:layout_constraintTop_toTopOf="@id/tvNameLbl" />


            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrierName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tvNameLbl,tvName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvQtyLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_quantity"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrierName" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"

                app:layout_constraintStart_toEndOf="@id/tvQtyLbl"
                app:layout_constraintTop_toTopOf="@id/tvQtyLbl" />


            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrierQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tvQty,tvQtyLbl" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSizeLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_size"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrierQty" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"

                app:layout_constraintStart_toEndOf="@id/tvSizeLbl"
                app:layout_constraintTop_toTopOf="@id/tvSizeLbl" />


            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrierSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tvSize,tvSizeLbl" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUnitLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="Unit : "
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrierSize" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"

                app:layout_constraintStart_toEndOf="@id/tvUnitLbl"
                app:layout_constraintTop_toTopOf="@id/tvUnitLbl" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>

